--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
