--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@tanstack/react-router-devtools": "^1.131.35",
     "aos": "^2.3.4",
     "feather-icons": "^4.29.2",
+    "html2canvas": "^1.4.1",
+    "html2canvas-oklch": "^1.5.0-alpha.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
