--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
