--- a/package.json
+++ b/package.json
@@ -11,30 +11,39 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-router": "^1.131.35",
     "@tanstack/react-router-devtools": "^1.131.35",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "feather-icons": "^4.29.2",
     "html2canvas": "^1.4.1",
     "html2canvas-oklch": "^1.5.0-alpha.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.2.1",
     "sweetalert2": "^11.23.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tanstack/router-plugin": "^1.131.35",
     "@types/aos": "^3.0.7",
+    "@types/node": "^24.8.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.1.7",
     "@types/react-icons": "^2.2.7",
