--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
 # Vite env variables (prefix with VITE_)
-VITE_API_BASE_URL=https://localhost:7044
+VITE_API_BASE_URL=http://apidisastermatch.somee.com
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_...
 
 # Optional: predefined Stripe Price IDs for your products
